# extcats

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yaml  main.yml  package.yml  pytest.yaml
extcats/: CatalogManager.py  CatalogPusher.py  CatalogQuery.py  GwPusher.py  GwQuery.py  __init__.py  catquery_utils.py  testdata.py
notebooks/: example_ingest_multiproc.ipynb  insert_allWISE.ipynb  insert_example.ipynb  query_example.ipynb
notebooks/.ipynb_checkpoints/: example_ingest_multiproc-checkpoint.ipynb  insert_allWISE-checkpoint.ipynb  query_example-checkpoint.ipynb
tests/: conftest.py  test_CatalogQuery.py
tests/test-data/milliquas/: heasarc_milliquas_sample.tdat
