[tool.poetry]
name = "extcats"
version = "2.4.0"
description = "Tools to organize and query astronomical catalogs"
authors = ["Matteo Giomi <matteo.giomi@desy.de>"]
maintainers = ["Jakob van Santen <jakob.van.santen@desy.de>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/AmpelProject/extcats"

[tool.poetry.dependencies]
python = "^3.7.1"
pymongo = "^3.7"
healpy = "^1.14.0"
astropy = "^4.2"
pandas = {version = "^1.2", optional = true}
tqdm = {version = "^4.58.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.extras]
ingest = ["tqdm", "pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
