[tool.poetry]
name = "extcats"
version = "2.5.0"
description = "Tools to organize and query astronomical catalogs"
authors = ["Matteo Giomi <matteo.giomi@desy.de>"]
maintainers = ["Jakob van Santen <jakob.van.santen@desy.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AmpelProject/extcats"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pymongo = ">=3.7,<5.0"
healpy = "^1.14.0"
astropy = ">=4.2"
pandas = {version = ">=1.2", optional = true}
tqdm = {version = "^4.58.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = ">=2.12.1"

[tool.poetry.extras]
ingest = ["tqdm", "pandas"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-tqdm = "^4.66.0.20240106"
geojson = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
packages = ["extcats"]

[[tool.mypy.overrides]]
module = [
    "healpy",
    "astropy.*",
    "pandas",
    "geojson",
]
ignore_missing_imports = true